# My_own-_projects

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  my.txt  pyproject.toml
work_with_file/: input_handler.py  iuser_repository.py  iuser_service.py  main.py  models.py  user_repository.py  user_service.py
